--- a/app/css/app.css
+++ b/app/css/app.css
@@ -826,6 +826,7 @@ An element with two faces will flip upon hover
   top: 360px;
   bottom: 0;
   border: 0;
+  overflow: hidden;
 }
 .app-pattern-display iframe {
   display: block;
@@ -835,6 +836,7 @@ An element with two faces will flip upon hover
   width: 100%;
   height: 100%;
   padding: 0;
+  overflow: hidden;
   border: 0;
 }
 
