--- a/app/scss/views/_pattern.scss
+++ b/app/scss/views/_pattern.scss
@@ -88,6 +88,7 @@
 	top: 360px;
 	bottom: 0;
 	border: 0;
+	overflow: hidden;
 
 	//iframe
 	iframe {
@@ -98,6 +99,7 @@
 		width: 100%;
 		height: 100%;
 		padding: 0;
+		overflow: hidden;
 		border: 0;
 	}
 }
